@@ -10,7 +10,7 @@ Vcs-Git: git://shorewall.git.sourceforge.net/gitroot/shorewall/shorewall/debian
 
 Package: shorewall-lite
 Architecture: all
-Depends: iptables (>= 1.3.8), iproute, bc, ${misc:Depends}
+Depends: shorewall-core (>= ${shorewall:current}), iptables (>= 1.3.8), iproute, bc, ${misc:Depends}
 Suggests: shorewall-doc, linux-image-2.6, make
 Conflicts: ipmasq, knetfilter, firewall-easy, filtergen, uif, webmin-firewall, ipmenu, gnome-lokkit, guarddog, guidedog, ferm
 Recommends: wget
