@@ -1,8 +1,9 @@
 shorewall-lite (4.5.20-1) unstable; urgency=low
 
   * New Upstream Version
+  * Explicitly express dependency on shorewall-core (Closes: #717741)
 
- -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 24 Sep 2013 19:41:25 -0400
+ -- Roberto C. Sanchez <roberto@connexer.com>  Tue, 24 Sep 2013 19:45:39 -0400
 
 shorewall-lite (4.5.16.1-1) unstable; urgency=low
 
